<resources>
    <string name="app_name">MamoPayKeyboard</string>
    <string name="keyboard_fragment_title">MampPay Keyboard</string>

    <!-- For Localization -->
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
    <string name="keyboard_dot">.</string>
    <string name="digit_0">0</string>
    <string name="currency_aed">AED</string>

</resources>