<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/keyboard_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button1"
        style="@style/keyboard_digit_key_style"
        android:layout_marginStart="@dimen/grid_2x"
        android:layout_marginEnd="@dimen/grid_2x"
        android:text="@string/digit_1"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        style="@style/keyboard_digit_key_style"
        android:layout_marginStart="@dimen/grid_2x"
        android:layout_marginEnd="@dimen/grid_2x"
        android:text="@string/digit_2"
        app:layout_constraintBottom_toBottomOf="@id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        style="@style/keyboard_digit_key_style"
        android:layout_marginStart="@dimen/grid_2x"
        android:layout_marginEnd="@dimen/grid_2x"
        android:text="@string/digit_3"
        app:layout_constraintBottom_toBottomOf="@id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button4"
        style="@style/keyboard_digit_key_style"
        android:text="@string/digit_4"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintStart_toStartOf="@id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button5"
        style="@style/keyboard_digit_key_style"
        android:text="@string/digit_5"
        app:layout_constraintBottom_toBottomOf="@id/button4"
        app:layout_constraintEnd_toEndOf="@id/button2"
        app:layout_constraintStart_toStartOf="@id/button2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button6"
        style="@style/keyboard_digit_key_style"
        android:text="@string/digit_6"
        app:layout_constraintBottom_toBottomOf="@id/button4"
        app:layout_constraintEnd_toEndOf="@id/button3"
        app:layout_constraintStart_toStartOf="@id/button3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button7"
        style="@style/keyboard_digit_key_style"
        android:text="@string/digit_7"
        app:layout_constraintBottom_toTopOf="@+id/buttonDot"
        app:layout_constraintStart_toStartOf="@id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button8"
        style="@style/keyboard_digit_key_style"
        android:text="@string/digit_8"
        app:layout_constraintBottom_toBottomOf="@id/button7"
        app:layout_constraintEnd_toEndOf="@id/button5"
        app:layout_constraintStart_toStartOf="@id/button5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button9"
        style="@style/keyboard_digit_key_style"
        android:text="@string/digit_9"
        app:layout_constraintBottom_toBottomOf="@id/button7"
        app:layout_constraintEnd_toEndOf="@id/button6"
        app:layout_constraintStart_toStartOf="@id/button6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDot"
        style="@style/keyboard_digit_key_style"
        android:gravity="center"
        android:text="@string/keyboard_dot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button7" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button0"
        style="@style/keyboard_digit_key_style"
        android:text="@string/digit_0"
        app:layout_constraintBottom_toBottomOf="@id/buttonDot"
        app:layout_constraintEnd_toEndOf="@id/button8"
        app:layout_constraintStart_toStartOf="@id/button8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRemove"
        style="@style/keyboard_del_key_style"
        app:icon="@drawable/keyboard_delete_key_icon_selector"
        app:layout_constraintBottom_toBottomOf="@id/buttonDot"
        app:layout_constraintEnd_toEndOf="@id/button9"
        app:layout_constraintStart_toStartOf="@id/button9" />


</androidx.constraintlayout.widget.ConstraintLayout>